# tcl-act

./: LICENSE  README.adoc  README.html  act
example/: CMakeLists.txt  README.adoc
example/assets/: data.txt
example/lib/beta/: foo.tcl
example/lib/cutil/: lib.cpp
example/manifests/: manifest.txt
examples/helloworld/: README.adoc  hello.tcl  main.tcl  manifest.txt
examples/libsodium/: README.adoc  act
examples/libsodium/app/: main.tcl
examples/libsodium/lib/alpha/: file1.tcl  file2.tcl
examples/libsodium/lib/beta/: bar.tcl
examples/libsodium/manifests/: manifest.txt
